# BleUI-Fw-Updater

./: .gitignore  README.md  bleuio.2.7.9.11-release.img  bleuio.2.7.9.29-release.img  bleuio.2.7.9.70-release.img  bleuio_fw_updater.py  gui.py  pyproject.toml  readme.txt  requirements.txt
